Validator jQuery- Partial

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,3 +56,43 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
 
 password.do.not.match.confirm.password="Confirm Password Do Not Match as the Password"
+
+
+
+
+com.ttnd.linksharing.co.UserCO.firstName.nullable=Firstname of user should not be null
+com.ttnd.linksharing.co.UserCO.firstName.blank=Firstname of user should not be blank
+com.ttnd.linksharing.co.UserCO.email.unique=Email id of user must be unique
+com.ttnd.linksharing.co.UserCO.email.blank=Email id of user could not be blank
+com.ttnd.linksharing.co.UserCO.email.email=Email id of user should be of type email
+com.ttnd.linksharing.co.UserCO.email.nullable=Email id of user should not be nullable
+com.ttnd.linksharing.co.UserCO.userName.nullable=userName of user can not not be nullable
+com.ttnd.linksharing.co.UserCO.userName.blank=userName of user should not be blank
+com.ttnd.linksharing.co.UserCO.userName.unique=userName of user should be unique
+com.ttnd.linksharing.co.UserCO.lastName.nullable=Lastname of user should not be null
+com.ttnd.linksharing.co.UserCO.lastName.blank=Lastname of user should not be blank
+com.ttnd.linksharing.co.UserCO.password.nullable=Password of user should not be null
+com.ttnd.linksharing.co.UserCO.password.blank=Password of user should not be blank
+com.ttnd.linksharing.co.UserCO.password.minSize=Password of user should be of this much size
+com.ttnd.linksharing.co.UserCO.confirmPassword.nullable=Confrirm password of user should not be null
+com.ttnd.linksharing.co.UserCO.confirmPassword.blank=Confirm password of user should not be blank
+com.ttnd.linksharing.co.UserCO.confirmPassword.validator=Confirm password should be similar to the password
+
+
+com.ttnd.linksharing.User.firstName.nullable=Firstname of user should not be null
+com.ttnd.linksharing.User.firstName.blank=Firstname of user should not be blank
+com.ttnd.linksharing.User.email.unique=Email id of user must be unique
+com.ttnd.linksharing.User.email.blank=Email id of user could not be blank
+com.ttnd.linksharing.User.email.email=Email id of user should be of type email
+com.ttnd.linksharing.User.email.nullable=Email id of user should not be nullable
+com.ttnd.linksharing.User.userName.nullable=userName of user can not not be nullable
+com.ttnd.linksharing.User.userName.blank=userName of user should not be blank
+com.ttnd.linksharing.User.userName.unique=userName of user should be unique
+com.ttnd.linksharing.User.lastName.nullable=Lastname of user should not be null
+com.ttnd.linksharing.User.lastName.blank=Lastname of user should not be blank
+com.ttnd.linksharing.User.password.nullable=Password of user should not be null
+com.ttnd.linksharing.User.password.blank=Password of user should not be blank
+com.ttnd.linksharing.User.password.minSize=Password of user should be of this much size
+com.ttnd.linksharing.User.confirmPassword.nullable=Confrirm password of user should not be null
+com.ttnd.linksharing.User.confirmPassword.blank=Confirm password of user should not be blank
+com.ttnd.linksharing.User.confirmPassword.validator=Confirm password should be similar to the password
