--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -96,3 +96,10 @@ com.ttnd.linksharing.User.password.minSize=Password of user should be of this mu
 com.ttnd.linksharing.User.confirmPassword.nullable=Confrirm password of user should not be null
 com.ttnd.linksharing.User.confirmPassword.blank=Confirm password of user should not be blank
 com.ttnd.linksharing.User.confirmPassword.validator=Confirm password should be similar to the password
+
+com.ttnd.linksharing.dto.EmailDTO.unread.resource ="Unread resources"
+com.ttnd.linksharing.dto.EmailDTO.unread.subject="Link sharing unread messages"
+
+com.ttnd.linksharing.dto.EmailDTO.forgot.password.subject="Linksharing Forgot Password Mail'
+
+com.ttnd.linksharing.dto.EmailDTO.topic.invitation.subject="Linksharing Topic Join Invitation"
