Application Update, Config Changes, Jobs Change, Resource Ratings Change

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -55,10 +55,10 @@ typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
 
+
+
+
 password.do.not.match.confirm.password="Confirm Password Do Not Match as the Password"
-
-
-
 
 com.ttnd.linksharing.co.UserCO.firstName.nullable=Firstname of user should not be null
 com.ttnd.linksharing.co.UserCO.firstName.blank=Firstname of user should not be blank
@@ -78,7 +78,6 @@ com.ttnd.linksharing.co.UserCO.confirmPassword.nullable=Confrirm password of use
 com.ttnd.linksharing.co.UserCO.confirmPassword.blank=Confirm password of user should not be blank
 com.ttnd.linksharing.co.UserCO.confirmPassword.validator=Confirm password should be similar to the password
 
-
 com.ttnd.linksharing.User.firstName.nullable=Firstname of user should not be null
 com.ttnd.linksharing.User.firstName.blank=Firstname of user should not be blank
 com.ttnd.linksharing.User.email.unique=Email id of user must be unique
@@ -97,9 +96,38 @@ com.ttnd.linksharing.User.confirmPassword.nullable=Confrirm password of user sho
 com.ttnd.linksharing.User.confirmPassword.blank=Confirm password of user should not be blank
 com.ttnd.linksharing.User.confirmPassword.validator=Confirm password should be similar to the password
 
-com.ttnd.linksharing.dto.EmailDTO.unread.resource ="Unread resources"
-com.ttnd.linksharing.dto.EmailDTO.unread.subject="Link sharing unread messages"
+com.ttnd.linksharing.dto.EmailDTO.unread.resource =Unread resources
+com.ttnd.linksharing.dto.EmailDTO.unread.subject=Link sharing unread messages
 
-com.ttnd.linksharing.dto.EmailDTO.forgot.password.subject="Linksharing Forgot Password Mail'
+com.ttnd.linksharing.dto.EmailDTO.forgot.password.subject=Linksharing Forgot Password Mail
 
 com.ttnd.linksharing.dto.EmailDTO.topic.invitation.subject="Linksharing Topic Join Invitation"
+
+com.ttnd.linksharing.login.login.inactive.account=Inactive Account"
+com.ttnd.linksharing.login.login.unregistered.account=Account not Available
+com.ttnd.linksharing.login.index.active.logged.in.account=Logged In
+com.ttnd.linksharing.login.logout.logged.out=Successfully Logged Out
+com.ttnd.linksharing.login.forgot.password.error.email=Please Enter an E-mail
+
+com.ttnd.linksharing.user.image.image.not.found=Image not Found
+com.ttnd.linksharing.user.update.User.Active.Status.active.status.toggled=Active Status Toggled
+com.ttnd.linksharing.user.update.User.Active.Status.active.status.not.toggled=Active Status not Toggled
+com.ttnd.linksharing.user.save.profile.updated=Profile Updated
+com.ttnd.linksharing.user.save.profile.not.updated=Profile not Updated
+com.ttnd.linksharing.user.save.password.updated=Password Changed
+com.ttnd.linksharing.user.save.password.not.updated=Password not Changed
+
+com.ttnd.linksharing.topic.show.private.topic.cannot.access=Topic is Private, User is not Subscribed to it
+com.ttnd.linksharing.topic.show.do.not.exists=Topic do not Exists
+com.ttnd.linksharing.topic.topic.save.update.error=Topic Save/Update Error
+com.ttnd.linksharing.topic.topic.not.saved.updated=Topic not Saved/Updated
+com.ttnd.linksharing.topic.topic.saved.updated=Topic Saved/Updated
+com.ttnd.linksharing.topic.delete.topic.deleted=Topic deleted
+com.ttnd.linksharing.topic.delete.topic.not.deleted=Topic not Deleted
+com.ttnd.linksharing.topic.delete.topic.user.not.set=Topic/User not set
+com.ttnd.linksharing.topic.invite.invitation.sent=Topic invitation sent
+com.ttnd.linksharing.topic.invite.invitation.not.sent=Topic invitation not sent
+com.ttnd.linksharing.topic.join.topic.subscribed=Topic Subscribed By Invitation
+com.ttnd.linksharing.topic.join.topic.not.subscribed=Topic not Susbcribed By Invitation
+com.ttnd.linksharing.topic.join.session.not.set=Session of User not Set
+com.ttnd.linksharing.topic.join.topic.do.not.esists=Topic do not Exists
